--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "yarn clean && parcel build index.html --no-source-maps --public-url . --out-dir dist",
-    "clean": "rm -rfv dist/*",
+    "clean": "rm -rf dist/.git && rm -rfv dist/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
