--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pixi.js": "^5.3.3"
   },
   "devDependencies": {
-    "@types/webfontloader": "^1.6.32",
+    "@types/css-font-loading-module": "^0.0.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "ts-loader": "^8.0.4",
